@@ -3,6 +3,7 @@
 	* exit4.c: New test.
 	* exit5.c: New test.
 	* cancel7.c: New test.
+	* cancel8.c: New test.
 
 2003-08-13  Ross Johnson  <rpj@ise.canberra.edu.au>
 
